--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Glory Glory Man United you rhe best club in the world</h1>
+    <h1>Glory Glory Man United you the best club in the world</h1>
     
 </body>
 </html>
